@@ -12,21 +12,21 @@ public class FunctionInDiapasonTest {
     @Test
     public void whenLinearFunctionThenLinearResults() {
         List<Double> result = FunctionInDiapason.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenQuadFunction() {
         List<Double> result = FunctionInDiapason.diapason(0, 4, x -> x * x * x + 1);
-        List<Double> expected = Arrays.asList(1D, 2D, 9D, 28D);
+        List<Double> expected = List.of(1D, 2D, 9D, 28D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenExponentialFunction() {
         List<Double> result = FunctionInDiapason.diapason(2, 5, x -> Math.pow(3, x));
-        List<Double> expected = Arrays.asList(9D, 27D, 81D);
+        List<Double> expected = List.of(9D, 27D, 81D);
         assertThat(result, is(expected));
     }
 
